Export CanonOutputT template instantiations to avoid double definition.

The double instantiations seem to happen because of virtual methods. If
the class could lose be non-virtual, this could be fixed. However, this
is blocking another CL and this fix is the optimal one with regards to
time constraints.

Bug: 747081
Change-Id: I5c2d2cc7a9e49266b25d2cd3d9835d0647e5438a