base/export_template.h
@@ -3,8 +3,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 // Use of this source code is governed by a BSD-style license that can be
 // found in the LICENSE file.
 
-#ifndef IPC_EXPORT_TEMPLATE_H_
-#define IPC_EXPORT_TEMPLATE_H_
+#ifndef BASE_EXPORT_TEMPLATE_H_
+#define BASE_EXPORT_TEMPLATE_H_
 
 // Synopsis
 //
@@ -161,4 +161,4 @@ EXPORT_TEMPLATE_TEST(DEFAULT, __declspec(dllimport));
 #undef EXPORT_TEMPLATE_TEST_DEFAULT_DEFAULT
 #undef EXPORT_TEMPLATE_TEST_MSVC_HACK_MSVC_HACK
 
-#endif  // IPC_EXPORT_TEMPLATE_H_
+#endif  // BASE_EXPORT_TEMPLATE_H_
