ipc/ipc_message_macros.h
@@ -206,8 +206,8 @@
 
 #include <tuple>
 
+#include "base/export_template.h"
 #include "base/profiler/scoped_profile.h"
-#include "ipc/export_template.h"
 #include "ipc/ipc_message_templates.h"
 #include "ipc/ipc_message_utils.h"
 #include "ipc/param_traits_macros.h"
