url/url_canon.h
@@ -9,6 +9,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include <stdlib.h>
 #include <string.h>
 
+#include "base/export_template.h"
 #include "base/strings/string16.h"
 #include "url/third_party/mozilla/url_parse.h"
 #include "url/url_export.h"
@@ -174,6 +175,11 @@ class RawCanonOutputT : public CanonOutputT<T> {
  protected:
   T fixed_buffer_[fixed_capacity];
 };
+
+// Explicitely instantiate commonly used instatiations.
+extern template class EXPORT_TEMPLATE_DECLARE(URL_EXPORT) CanonOutputT<char>;
+extern template class EXPORT_TEMPLATE_DECLARE(URL_EXPORT)
+    CanonOutputT<base::char16>;
 
 // Normally, all canonicalization output is in narrow characters. We support
 // the templates so it can also be used internally if a wide buffer is
